# calculator

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .replit  .vsts-ci.Linux.yml  .vsts-ci.Windows.yml  .vsts-ci.iOS.yml  .vsts-ci.yml  1.txt  :  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Calculator  Contributor.txt  Directory.Build.props  NOTICE.txt  Newfile  README.md  README.txt  README_ch.md  Raging camo gazebo  SECURITY.md  V1new  a.cpp  addition  azure-pipelines.yml  calc.java  calculate_average  calculator.code-workspace  calculator.py  devops.txt  fdfsfsfffsf.txt  firstfile  gitversion.yml  microsoft license  new.txt  newfile.txt  nuget.config  (+6 more)
src/: .editorconfig  .vsconfig  AssemblyVersion.Android.cs  AssemblyVersion.Uwp.cs  AssemblyVersion.Wasm.cs  AssemblyVersion.iOS.cs  CMakeLists.txt  Calculator.sln  Calculator.slnx  Directory.Build.props  Settings.XamlStyler  clang-format-all.sh  nuget.config
src/CalcManager/: CCalcManager.cpp  CCalcManager.h  CMakeLists.txt  CalcException.h  CalcManager.vcxproj  CalcManager.vcxproj.filters  CalcManager.wasm  CalculatorHistory.cpp  CalculatorHistory.h  Command.h  (+27 more)
src/CalcManager.Android/: CalcManager.Android.vcxproj  CalcManager.Android.vcxproj.filters  CalcManager_Android.cpp  CalcManager_Android.h  Source.cpp  pch.h  strto_workaround.cpp
src/CalcManager.Interop/: CalcManager.Interop.CategorySelectionResult.h  CalcManager.Interop.ExpressionCommandWrapper.h  CalcManager.Interop.HistoryItemWrapper.h  CalcManager.Interop.vcxproj  CalcManager.def  CalcManagerImpl.cpp  CalcManagerInterop.cpp  CalcManagerInterop.h  CalcManagerInterop.idl  CalculatorManagerWrapper.h  CategorySelectionResult.cpp  CategorySelectionResult.h  ConverterDataLoaderBase.h  ExpressionCommandWrapper.cpp  ExpressionCommandWrapper.h  HistoryItemWrapper.cpp  HistoryItemWrapper.h  HistoryToken.h  UnitConverterImpl.cpp  UnitConverterInterop.cpp  UnitConverterInterop.h  UnitConverterInterop.idl  UnitConverterVMCallbackBase.h  UnitConverterWrapper.h  ViewModelCurrencyCallbackBase.h  pch.h
(+1187 files in other folders)
